{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 85,
  "lineage": "fb44759d-9ad9-6ca9-adef-b8c65f09a2a5",
  "resources": [
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e8614bab2439a742",
            "arn": "arn:aws:ec2:ap-south-1:638417784865:elastic-ip/eipalloc-0e8614bab2439a742",
            "domain": "vpc",
            "id": "eipalloc-0e8614bab2439a742",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-126-31-195.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.31.195",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prefect-ecs"
            },
            "tags_all": {
              "Name": "prefect-ecs"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638417784865:internet-gateway/igw-0030808f3a4f18a2e",
            "id": "igw-0030808f3a4f18a2e",
            "owner_id": "638417784865",
            "tags": {
              "Name": "prefect-ecs"
            },
            "tags_all": {
              "Name": "prefect-ecs"
            },
            "vpc_id": "vpc-0a155b09db02cbf0e"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.prefect_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e8614bab2439a742",
            "association_id": "eipassoc-05835a5f50f28c66a",
            "connectivity_type": "public",
            "id": "nat-0c50c4bdde901d3d9",
            "network_interface_id": "eni-07a04de8b0d7b3f66",
            "private_ip": "10.0.0.147",
            "public_ip": "13.126.31.195",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-042af99fb87e8b2e0",
            "tags": {
              "Name": "prefect-ecs"
            },
            "tags_all": {
              "Name": "prefect-ecs"
            }
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.nat_eip",
            "module.aws_vpc.aws_internet_gateway.igw",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.prefect_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638417784865:route-table/rtb-0c1878db150f1f20f",
            "id": "rtb-0c1878db150f1f20f",
            "owner_id": "638417784865",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c50c4bdde901d3d9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prefect-ecs"
            },
            "tags_all": {
              "Name": "prefect-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a155b09db02cbf0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_eip.nat_eip",
            "module.aws_vpc.aws_internet_gateway.igw",
            "module.aws_vpc.aws_nat_gateway.nat",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.prefect_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638417784865:route-table/rtb-034791c21c29a0680",
            "id": "rtb-034791c21c29a0680",
            "owner_id": "638417784865",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0030808f3a4f18a2e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prefect-ecs"
            },
            "tags_all": {
              "Name": "prefect-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a155b09db02cbf0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.igw",
            "module.aws_vpc.aws_vpc.prefect_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0692d2a1ee2a35b54",
            "route_table_id": "rtb-0c1878db150f1f20f",
            "subnet_id": "subnet-07cc94904ba13dd75"
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.nat_eip",
            "module.aws_vpc.aws_internet_gateway.igw",
            "module.aws_vpc.aws_nat_gateway.nat",
            "module.aws_vpc.aws_route_table.private_rt",
            "module.aws_vpc.aws_subnet.private_subnets",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.prefect_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0795aaf5c9c72d2a3",
            "route_table_id": "rtb-0c1878db150f1f20f",
            "subnet_id": "subnet-0172e2b440180ad6a"
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.nat_eip",
            "module.aws_vpc.aws_internet_gateway.igw",
            "module.aws_vpc.aws_nat_gateway.nat",
            "module.aws_vpc.aws_route_table.private_rt",
            "module.aws_vpc.aws_subnet.private_subnets",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.prefect_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee3cac9156151510",
            "route_table_id": "rtb-0c1878db150f1f20f",
            "subnet_id": "subnet-09f02e6bcbb40520d"
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.nat_eip",
            "module.aws_vpc.aws_internet_gateway.igw",
            "module.aws_vpc.aws_nat_gateway.nat",
            "module.aws_vpc.aws_route_table.private_rt",
            "module.aws_vpc.aws_subnet.private_subnets",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.prefect_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1f3989677394473",
            "route_table_id": "rtb-034791c21c29a0680",
            "subnet_id": "subnet-042af99fb87e8b2e0"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.igw",
            "module.aws_vpc.aws_route_table.public_rt",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.prefect_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3f65e32e31c9af8",
            "route_table_id": "rtb-034791c21c29a0680",
            "subnet_id": "subnet-0bd1c619d99cad778"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.igw",
            "module.aws_vpc.aws_route_table.public_rt",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.prefect_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05adb7744a2d576a0",
            "route_table_id": "rtb-034791c21c29a0680",
            "subnet_id": "subnet-0b1f40e3b2b5f2d88"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.igw",
            "module.aws_vpc.aws_route_table.public_rt",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.prefect_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638417784865:subnet/subnet-07cc94904ba13dd75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.96.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07cc94904ba13dd75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "638417784865",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prefect-ecs"
            },
            "tags_all": {
              "Name": "prefect-ecs"
            },
            "vpc_id": "vpc-0a155b09db02cbf0e"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.prefect_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638417784865:subnet/subnet-0172e2b440180ad6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.97.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0172e2b440180ad6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "638417784865",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prefect-ecs"
            },
            "tags_all": {
              "Name": "prefect-ecs"
            },
            "vpc_id": "vpc-0a155b09db02cbf0e"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.prefect_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638417784865:subnet/subnet-09f02e6bcbb40520d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.98.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f02e6bcbb40520d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "638417784865",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prefect-ecs"
            },
            "tags_all": {
              "Name": "prefect-ecs"
            },
            "vpc_id": "vpc-0a155b09db02cbf0e"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.prefect_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638417784865:subnet/subnet-042af99fb87e8b2e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042af99fb87e8b2e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "638417784865",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prefect-ecs"
            },
            "tags_all": {
              "Name": "prefect-ecs"
            },
            "vpc_id": "vpc-0a155b09db02cbf0e"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.prefect_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638417784865:subnet/subnet-0bd1c619d99cad778",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd1c619d99cad778",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "638417784865",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prefect-ecs"
            },
            "tags_all": {
              "Name": "prefect-ecs"
            },
            "vpc_id": "vpc-0a155b09db02cbf0e"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.prefect_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638417784865:subnet/subnet-0b1f40e3b2b5f2d88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1f40e3b2b5f2d88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "638417784865",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prefect-ecs"
            },
            "tags_all": {
              "Name": "prefect-ecs"
            },
            "vpc_id": "vpc-0a155b09db02cbf0e"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.prefect_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prefect_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638417784865:vpc/vpc-0a155b09db02cbf0e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f8256e7f27e65d8a",
            "default_route_table_id": "rtb-03a5a5d88de2505af",
            "default_security_group_id": "sg-07896b2083ee5a016",
            "dhcp_options_id": "dopt-02d482ee1e226338c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a155b09db02cbf0e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03a5a5d88de2505af",
            "owner_id": "638417784865",
            "tags": {
              "Name": "prefect-ecs"
            },
            "tags_all": {
              "Name": "prefect-ecs"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638417784865:security-group/sg-0c3c67e42fd23d9b7",
            "description": "Security group for ECS Fargate Prefect Worker",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3c67e42fd23d9b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow traffic within VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ecs-service-sg",
            "name_prefix": "",
            "owner_id": "638417784865",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prefect-ecs"
            },
            "tags_all": {
              "Name": "prefect-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a155b09db02cbf0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.prefect_vpc"
          ]
        }
      ]
    }
  ]
}